--- a/index.html
+++ b/index.html
@@ -2,17 +2,9 @@
 <html>
 	<head>
 		<meta charset="UTF-8"/>
-		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-		<link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection"/>
-		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
-		<title></title>
+		<title>Roubar Banco</title>
 	</head>
 	<body>
-
-    
-
-		<script src="js/jquery-3.1.1.min.js"></script>
-		<script type="text/javascript" src="js/materialize.min.js"></script>
-		<script type="text/javascript" src="js/js.js"></script>
+		<script type="text/javascript" src="js.js"></script>
 	</body>
 </html>
